--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutter_tests_companion
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
 
 environment:
   sdk: '>=3.0.2 <4.0.0'
@@ -10,12 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.1.2
+  flutter_stripe:
+    git:
+      url: https://github.com/Kuodster/flutter_stripe.git
+      path: packages/stripe
+      ref: main
+  dio: ^5.2.1+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
